# animtool

./: .gitignore  CMakeLists.txt  Package.swift  README.md  buildios.sh
Plugins/CMakePlugin/: CMakePlugin.swift
Sources/animtool/: animtool.swift
animtool/animtool/: animtool.h
app/: animate_cmd.cpp  animate_cmd.h  animtool.cpp  blur_cmd.cpp  blur_cmd.h  cli.h  cluster_cmd.cpp  cluster_cmd.h  count_cmd.cpp  count_cmd.h  dropframes_cmd.cpp  dropframes_cmd.h  info_cmd.cpp  info_cmd.h  mask_cmd.cpp  mask_cmd.h  opacity_cmd.cpp  opacity_cmd.h  output_flags.cpp  output_flags.h  overlay_cmd.cpp  overlay_cmd.h  underlay_cmd.cpp  underlay_cmd.h
common/: cli.h
core/: addlayer.cpp  addlayer.h  animate.cpp  animate.h  animenc.cpp  animenc.h  animrun.cpp  animrun.h  blur.cpp  blur.h  blurutils.cpp  blurutils.h  cg.h  check.h  check_gif.h  clrparse.h  cluster.cpp  cluster.h  count.cpp  count.h  decrun.cpp  decrun.h  dropframes.cpp  dropframes.h  filefmt.cpp  filefmt.h  gifcompat.h  gifrun.cpp  gifrun.h  imgrun.cpp  imgrun.h  logger.h  mask.cpp  mask.h  opacity.cpp  opacity.h  overlay.cpp  overlay.h  picutils.cpp  picutils.h  (+5 more)
dep/jpeg/: CMakeLists.txt
imageio/: image_enc.c  imageio_util.c  webpdec.c
ios/: animtool.swift  animtool_ios.h
ios/animtool_ios.xcodeproj/: project.pbxproj
utils/: defer.h  parse.h
xcode/: SwiftyAnimTool.h  SwiftyAnimTool.swift  build-animtool.sh
xcode/SwiftyAnimTool.xcodeproj/: project.pbxproj
